--- a/HashTable/HashTable.vcxproj.filters
+++ b/HashTable/HashTable.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="HashEl.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Hash.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
